Most of the html/css part is done. Animations have to be added. Icon is still not showing. Will fix th issue now

--- a/main_menu.css
+++ b/main_menu.css
@@ -2,13 +2,6 @@ section{
   width: 100%;
   float: left;
 }
-header{
-  display: block;
-  -o-background-size: 100% 100%, auto;
-  -moz-background-size: 100% 100%, auto;
-  -webkit-background-size: 100% 100%, auto;
-  background-size: 100% 100%, auto;
-}
 .grid{
   -o-background-size: 100% 100%, auto;
   -moz-background-size: 100% 100%, auto;
@@ -36,4 +29,17 @@ header{
   width: 100%;
   height: 20%;
   font-size: calc(100%);
+}
+.title{
+  width: 30%;
+  margin-left: 15%;
+  font-size: 200%;
+}
+.icon{
+  width: 50%;
+  -o-background-size: 100% 100%, auto;
+  -moz-background-size: 100% 100%, auto;
+  -webkit-background-size: 100% 100%, auto;
+  background-size: 100% 100%, auto;
+  clear: left;
 }
