--- a/template.css
+++ b/template.css
@@ -23,5 +23,4 @@ header
   width:80%;
   float: left;
   text-align: left;
-  margin-left: 8%;
 }
